manifest/main/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-main
  namespace: argocd-main
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: argocd-main
  template:
    metadata:
      labels:
        app: argocd-main
    spec:
      containers:
        - name: argocd-main
          image: 611434859417.dkr.ecr.us-east-1.amazonaws.com/agrocd:main-9f9f2ca
          imagePullPolicy:
          ports:
            - containerPort: 80
