manifest/main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-main-service
  namespace: argocd-main
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: argocd-main
